[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio-macros = { version = "0.2.0-alpha.6" }
serde_json = "1.0"
